--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="../src/index.js"></script>
+    <script src="../src/index.js" type="text/javascript"></script>
   </body>
 </html>
